--- a/index.html
+++ b/index.html
@@ -788,7 +788,7 @@
                   ></a>
                 </li>
               </ul>
-              <p>Copyright © 2021 UIdeck All Right Reserved</p>
+              <p>Copyright © 2021 Θωμάς All Right Reserved</p>
             </div>
           </div>
         </div>
