--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@
                 </li>
                 <li>
                   <div class="content-text">
-                    <h3 class="line-title">Bsc In CSE - Yale University</h3>
+                    <h3 class="line-title">HHHHHH</h3>
                     <span>2012 - 2016</span>
                     <p class="line-text">
                       Expenses as material breeding insisted building to in.
@@ -355,7 +355,7 @@
                 <li>
                   <div class="content-text">
                     <h3 class="line-title">
-                      Higher Secondary School - San andreas
+                      Higher Secondary School - HHHHHHHHHH
                     </h3>
                     <span>2010 - 2012</span>
                     <p class="line-text">
@@ -367,7 +367,7 @@
                 </li>
                 <li>
                   <div class="content-text">
-                    <h3 class="line-title">Secondary School - san andreas</h3>
+                    <h3 class="line-title">hhhhhhhhhhh - san andreas</h3>
                     <span>2005 - 2010</span>
                     <p class="line-text">
                       Expenses as material breeding insisted building to in.
@@ -388,7 +388,7 @@
                 </li>
                 <li>
                   <div class="content-text">
-                    <h3 class="line-title">Art Director - Tesla Inc.</h3>
+                    <h3 class="line-title">Art HHHHHHHHHHHH</h3>
                     <span>Jan 2018 - Present</span>
                     <p class="line-text">
                       Expenses as material breeding insisted building to in.
@@ -399,7 +399,7 @@
                 </li>
                 <li>
                   <div class="content-text">
-                    <h3 class="line-title">UX/UI Designer - Samsung</h3>
+                    <h3 class="line-title">HHHHHHHHHH</h3>
                     <span>Nov 2020 - Dec 2017</span>
                     <p class="line-text">
                       Expenses as material breeding insisted building to in.
@@ -410,7 +410,7 @@
                 </li>
                 <li>
                   <div class="content-text">
-                    <h3 class="line-title">Intern UI Designer - UIdeck</h3>
+                    <h3 class="line-title">HHHHHHHH </h3>
                     <span>Mar 2020 - Oct 2021</span>
                     <p class="line-text">
                       Expenses as material breeding insisted building to in.
