--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                   Hi This is
                 </h5>
                 <h2 class="head-title wow fadeInUp" data-wow-delay="0.4s">
-                  Thomas Ladouyou
+                  thomas
                 </h2>
                 <p class="script-font wow fadeInUp" data-wow-delay="0.6s">
                   Front-end Web Developer and Graphic Designer
